// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`astToEsQueryDsl ast - '' 1`] = `
{
  "match_all": {},
}
`;

exports[`astToEsQueryDsl ast - '(john OR -mary)' 1`] = `
{
  "bool": {
    "must": [
      {
        "bool": {
          "should": [
            {
              "bool": {
                "must": [
                  {
                    "simple_query_string": {
                      "query": "+john",
                    },
                  },
                ],
              },
            },
            {
              "bool": {
                "must_not": [
                  {
                    "simple_query_string": {
                      "query": "+mary",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - '-group:es group:kibana -group:beats group:logstash' 1`] = `
{
  "bool": {
    "must": [
      {
        "bool": {
          "must": [
            {
              "match": {
                "group": {
                  "operator": "and",
                  "query": "kibana",
                },
              },
            },
            {
              "match": {
                "group": {
                  "operator": "and",
                  "query": "logstash",
                },
              },
            },
          ],
        },
      },
    ],
    "must_not": [
      {
        "bool": {
          "must": [
            {
              "match": {
                "group": {
                  "operator": "and",
                  "query": "es",
                },
              },
            },
            {
              "match": {
                "group": {
                  "operator": "and",
                  "query": "beats",
                },
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - 'is:online group:kibana john' 1`] = `
{
  "bool": {
    "must": [
      {
        "simple_query_string": {
          "query": "+john",
        },
      },
      {
        "match": {
          "group": {
            "operator": "and",
            "query": "kibana",
          },
        },
      },
      {
        "term": {
          "online": true,
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - 'john -doe is:online group:eng group:es -group:kibana -is:active' 1`] = `
{
  "bool": {
    "must": [
      {
        "simple_query_string": {
          "query": "+john",
        },
      },
      {
        "bool": {
          "must": [
            {
              "match": {
                "group": {
                  "operator": "and",
                  "query": "eng",
                },
              },
            },
            {
              "match": {
                "group": {
                  "operator": "and",
                  "query": "es",
                },
              },
            },
          ],
        },
      },
      {
        "term": {
          "online": true,
        },
      },
      {
        "term": {
          "active": false,
        },
      },
    ],
    "must_not": [
      {
        "simple_query_string": {
          "query": "+doe",
        },
      },
      {
        "match": {
          "group": {
            "operator": "and",
            "query": "kibana",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - 'john -sales' 1`] = `
{
  "bool": {
    "must": [
      {
        "simple_query_string": {
          "query": "+john",
        },
      },
    ],
    "must_not": [
      {
        "simple_query_string": {
          "query": "+sales",
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - 'john group:(eng or "marketing org") -group:"kibana team" 1`] = `
{
  "bool": {
    "must": [
      {
        "simple_query_string": {
          "query": "+john",
        },
      },
      {
        "bool": {
          "should": [
            {
              "match": {
                "group": {
                  "operator": "or",
                  "query": "eng",
                },
              },
            },
            {
              "match_phrase": {
                "group": "marketing org",
              },
            },
          ],
        },
      },
    ],
    "must_not": [
      {
        "match_phrase": {
          "group": "kibana team",
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - 'john group:(eng or es) -group:kibana' 1`] = `
{
  "bool": {
    "must": [
      {
        "simple_query_string": {
          "query": "+john",
        },
      },
      {
        "bool": {
          "should": [
            {
              "match": {
                "group": {
                  "operator": "or",
                  "query": "eng",
                },
              },
            },
            {
              "match": {
                "group": {
                  "operator": "or",
                  "query": "es",
                },
              },
            },
          ],
        },
      },
    ],
    "must_not": [
      {
        "match": {
          "group": {
            "operator": "and",
            "query": "kibana",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - (name:john OR name:fred) 1`] = `
{
  "bool": {
    "must": [
      {
        "bool": {
          "should": [
            {
              "bool": {
                "must": [
                  {
                    "match": {
                      "name": {
                        "operator": "and",
                        "query": "john",
                      },
                    },
                  },
                ],
              },
            },
            {
              "bool": {
                "must": [
                  {
                    "match": {
                      "name": {
                        "operator": "and",
                        "query": "fred",
                      },
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - (name:john) 1`] = `
{
  "bool": {
    "must": [
      {
        "bool": {
          "should": [
            {
              "bool": {
                "must": [
                  {
                    "match": {
                      "name": {
                        "operator": "and",
                        "query": "john",
                      },
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - -count<=4 size<5 age>=3 -number>9 1`] = `
{
  "bool": {
    "must": [
      {
        "range": {
          "size": {
            "lt": 5,
          },
        },
      },
      {
        "range": {
          "age": {
            "gte": 3,
          },
        },
      },
    ],
    "must_not": [
      {
        "range": {
          "count": {
            "lte": 4,
          },
        },
      },
      {
        "range": {
          "number": {
            "gt": 9,
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - count>3 1`] = `
{
  "bool": {
    "must": [
      {
        "range": {
          "count": {
            "gt": 3,
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - date:'2004-03' -date<'2004-03-10' 1`] = `
{
  "bool": {
    "must": [
      {
        "match": {
          "date": "2004-03-01T00:00:00Z||/M",
        },
      },
    ],
    "must_not": [
      {
        "range": {
          "date": {
            "lt": "2004-03-10T00:00:00Z||/d",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - date>'2004-02' -otherDate>='2004-03-10' 1`] = `
{
  "bool": {
    "must": [
      {
        "range": {
          "date": {
            "gte": "2004-02-01T00:00:00Z||+1M/M",
          },
        },
      },
    ],
    "must_not": [
      {
        "range": {
          "date": {
            "gte": "2004-03-10T00:00:00Z||/d",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - date>='2004-03-22' 1`] = `
{
  "bool": {
    "must": [
      {
        "range": {
          "date": {
            "gte": "2004-03-22T00:00:00Z||/d",
          },
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - name:"First \\"Nickname\\" Last" 1`] = `
{
  "bool": {
    "must": [
      {
        "match_phrase": {
          "name": "First "Nickname" Last",
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast - name:john (is:enrolled OR Teacher) 1`] = `
{
  "bool": {
    "must": [
      {
        "bool": {
          "must": [
            {
              "match": {
                "name": {
                  "operator": "and",
                  "query": "john",
                },
              },
            },
          ],
        },
      },
      {
        "bool": {
          "should": [
            {
              "bool": {
                "must": [
                  {
                    "term": {
                      "enrolled": true,
                    },
                  },
                ],
              },
            },
            {
              "bool": {
                "must": [
                  {
                    "simple_query_string": {
                      "query": "+Teacher",
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`astToEsQueryDsl ast·-·'"john·smith"·-"sales team"' 1`] = `
{
  "bool": {
    "must": [
      {
        "simple_query_string": {
          "query": "+"john smith"",
        },
      },
    ],
    "must_not": [
      {
        "simple_query_string": {
          "query": "+"sales team"",
        },
      },
    ],
  },
}
`;
